disable main workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,7 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
   docker-engine-tests:
+    if: false
     needs: [compute-matrices, typescript-build, docker-build]
     runs-on: ubuntu-latest
     timeout-minutes: 10
