--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "Domainname",
         "downcasting",
         "dprint",
+        "eftar",
         "endport",
         "etwlogs",
         "extrahosts",
