--- a/package.json
+++ b/package.json
@@ -46,6 +46,9 @@
         "test": "vitest",
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
+    "dependencies": {
+        "eftar": "0.0.1"
+    },
     "devDependencies": {
         "@babel/cli": "7.26.4",
         "@babel/core": "7.26.7",
