--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,12 +4,12 @@
     "image": "mcr.microsoft.com/devcontainers/base:bullseye",
 
     "features": {
-        "ghcr.io/devcontainers/features/go:1": {},
-        "ghcr.io/devcontainers/features/git:1": {},
-        "ghcr.io/devcontainers/features/node:1": {},
-        "ghcr.io/devcontainers/features/github-cli:1": {},
-        "ghcr.io/devcontainers/features/common-utils:2": {},
-        "ghcr.io/devcontainers/features/docker-in-docker:2": {}
+        "ghcr.io/devcontainers/features/go:1.3.1": {},
+        "ghcr.io/devcontainers/features/git:1.3.2": {},
+        "ghcr.io/devcontainers/features/node:1.6.1": {},
+        "ghcr.io/devcontainers/features/github-cli:1.0.13": {},
+        "ghcr.io/devcontainers/features/common-utils:2.5.1": {},
+        "ghcr.io/devcontainers/features/docker-in-docker:2.12.0": {}
     },
 
     "customizations": {
@@ -24,7 +24,8 @@
                 "eamodio.gitlens",
                 "mutantdino.resourcemonitor",
                 "GitHub.vscode-github-actions",
-                "yoavbls.pretty-ts-errors"
+                "yoavbls.pretty-ts-errors",
+                "redhat.vscode-yaml"
             ],
             "settings": {
                 "cSpell.enabled": true,
@@ -36,6 +37,12 @@
                 "editor.defaultFormatter": "EditorConfig.EditorConfig",
                 "[typescript][typescriptreact][javascript][javascriptreact][json][jsonc][yaml]": {
                     "editor.defaultFormatter": "esbenp.prettier-vscode"
+                },
+                "[yaml]": {
+                    "editor.tabSize": 2,
+                    "editor.insertSpaces": true,
+                    "editor.autoIndent": "advanced",
+                    "editor.defaultFormatter": "redhat.vscode-yaml"
                 },
                 "editor.codeActionsOnSave": {
                     "source.organizeImports": "always",
@@ -56,5 +63,6 @@
         }
     },
 
+    "remoteUser": "vscode",
     "postCreateCommand": "bash -i -c './.devcontainer/setup.sh'"
 }
