--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "the-moby-effect",
-    "version": "1.45.0-alpha.24",
+    "version": "0.0.0",
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
@@ -40,6 +40,7 @@
         "circular": "node ./scripts/circular.mjs",
         "clean": "rimraf .tsbuildinfo docs build dist coverage",
         "codegen": "build-utils prepare-v2",
+        "codemod": "node scripts/codemod.mjs",
         "coverage": "vitest --coverage",
         "lint": "eslint .",
         "schemagen": "pnpm build-reflection && pnpm build-schemas",
@@ -47,7 +48,7 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.7"
+        "eftar": "0.0.14"
     },
     "devDependencies": {
         "@babel/cli": "7.26.4",
@@ -55,32 +56,33 @@
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.26.3",
         "@effect/build-utils": "0.7.9",
-        "@effect/cli": "0.56.1",
+        "@effect/cli": "0.56.6",
         "@effect/docgen": "0.5.2",
         "@effect/eslint-plugin": "0.3.0",
-        "@effect/language-service": "0.2.0",
-        "@effect/platform": "0.77.1",
+        "@effect/language-service": "0.3.2",
+        "@effect/platform": "0.77.6",
         "@effect/platform-browser": "0.56.1",
         "@effect/platform-bun": "0.57.1",
         "@effect/platform-node": "0.73.1",
-        "@effect/printer": "0.41.1",
-        "@effect/printer-ansi": "0.41.1",
-        "@effect/typeclass": "0.32.1",
-        "@effect/vitest": "0.18.1",
+        "@effect/printer": "0.41.6",
+        "@effect/printer-ansi": "0.41.6",
+        "@effect/typeclass": "0.32.6",
+        "@effect/vitest": "0.19.4",
         "@eslint/compat": "1.2.7",
         "@eslint/eslintrc": "3.3.0",
         "@eslint/js": "9.21.0",
-        "@types/node": "22.13.5",
+        "@types/node": "22.13.9",
         "@types/ssh2": "1.15.4",
-        "@types/ws": "8.5.14",
-        "@typescript-eslint/eslint-plugin": "8.24.1",
-        "@typescript-eslint/parser": "8.24.1",
-        "@typescript-eslint/utils": "8.24.1",
-        "@vitest/coverage-v8": "2.1.9",
+        "@types/ws": "8.18.0",
+        "@typescript-eslint/eslint-plugin": "8.26.0",
+        "@typescript-eslint/parser": "8.26.0",
+        "@typescript-eslint/utils": "8.26.0",
+        "@vitest/coverage-v8": "3.0.7",
+        "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
-        "effect": "3.13.1",
+        "effect": "3.13.6",
         "eslint": "9.21.0",
-        "eslint-config-prettier": "10.0.1",
+        "eslint-config-prettier": "10.0.2",
         "eslint-import-resolver-typescript": "3.8.3",
         "eslint-plugin-codegen": "0.29.0",
         "eslint-plugin-prettier": "5.2.3",
@@ -88,30 +90,31 @@
         "eslint-plugin-sort-destructure-keys": "2.0.0",
         "fast-check": "3.23.2",
         "glob": "11.0.1",
+        "jscodeshift": "17.1.2",
         "madge": "8.0.0",
-        "prettier": "3.5.2",
+        "prettier": "3.5.3",
         "prettier-plugin-jsdoc": "1.3.2",
-        "prettier-plugin-packagejson": "2.5.8",
+        "prettier-plugin-packagejson": "2.5.10",
         "rimraf": "6.0.1",
         "ssh2": "1.16.0",
         "tsx": "4.19.3",
-        "typescript": "5.7.3",
+        "typescript": "5.8.2",
         "undici": "7.3.0",
-        "vite": "6.1.1",
-        "vitest": "2.1.9",
+        "vite": "6.2.0",
+        "vitest": "3.0.7",
         "ws": "8.18.1"
     },
     "peerDependencies": {
-        "@effect/platform": "0.77.1",
-        "effect": "3.13.1"
+        "@effect/platform": "0.77.6",
+        "effect": "3.13.6"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.56.1",
-        "@effect/platform-bun": "0.57.1",
-        "@effect/platform-node": "0.73.1",
+        "@effect/platform-browser": "0.56.6",
+        "@effect/platform-bun": "0.57.6",
+        "@effect/platform-node": "0.73.6",
         "ssh2": "^1.16.0",
-        "undici": "^7.3.0",
-        "ws": "^8.18.0"
+        "undici": "^7.4.0",
+        "ws": "^8.18.1"
     },
     "packageManager": "pnpm@9.15.5",
     "engines": {
