--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.14"
+        "eftar": "0.0.16"
     },
     "devDependencies": {
         "@babel/cli": "7.26.4",
@@ -59,6 +59,7 @@
         "@effect/cli": "0.56.6",
         "@effect/docgen": "0.5.2",
         "@effect/eslint-plugin": "0.3.0",
+        "@effect/experimental": "0.41.6",
         "@effect/language-service": "0.3.2",
         "@effect/platform": "0.77.6",
         "@effect/platform-browser": "0.56.1",
@@ -105,6 +106,7 @@
         "ws": "8.18.1"
     },
     "peerDependencies": {
+        "@effect/experimental": "0.41.6",
         "@effect/platform": "0.77.6",
         "effect": "3.13.6"
     },
