--- a/package.json
+++ b/package.json
@@ -62,9 +62,9 @@
         "@effect/experimental": "0.41.6",
         "@effect/language-service": "0.3.2",
         "@effect/platform": "0.77.6",
-        "@effect/platform-browser": "0.56.1",
-        "@effect/platform-bun": "0.57.1",
-        "@effect/platform-node": "0.73.1",
+        "@effect/platform-browser": "0.56.6",
+        "@effect/platform-bun": "0.57.6",
+        "@effect/platform-node": "0.73.6",
         "@effect/printer": "0.41.6",
         "@effect/printer-ansi": "0.41.6",
         "@effect/typeclass": "0.32.6",
@@ -86,6 +86,7 @@
         "eslint-config-prettier": "10.0.2",
         "eslint-import-resolver-typescript": "3.8.3",
         "eslint-plugin-codegen": "0.29.0",
+        "eslint-plugin-import-x": "4.6.1",
         "eslint-plugin-prettier": "5.2.3",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
@@ -100,6 +101,7 @@
         "ssh2": "1.16.0",
         "tsx": "4.19.3",
         "typescript": "5.8.2",
+        "typescript-eslint": "8.26.0",
         "undici": "7.3.0",
         "vite": "6.2.0",
         "vitest": "3.0.7",
