--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,11 @@
 remote_theme: mikearnaldi/just-the-docs
+baseurl: "/the-moby-effect"
+repository: "leonitousconforti/the-moby-effect"
 
 # Enable or disable the site search
 search_enabled: true
 
 # Aux links for the upper right navigation
 aux_links:
-'the-moby-effect on GitHub':
-  - 'https://github.com/leonitousconforti/the-moby-effect'
+"the-moby-effect on GitHub":
+  - "https://github.com/leonitousconforti/the-moby-effect"
