lets test in ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,8 +8,10 @@ on:
 
 env:
   docker-engine-connection-variants: "['ssh', 'http', 'https', 'socket']"
-  platform-variants: "['node-18.x', 'node-20.x', 'node-22.x', 'bun', 'deno', 'node-20.x-undici', 'node-22.x-undici', 'bun-undici', 'deno-undici']"
-  docker-engine-versions: "['docker.io/library/docker:23-dind-rootless', 'docker.io/library/docker:24-dind-rootless', 'docker.io/library/docker:25-dind-rootless', 'docker.io/library/docker:26-dind-rootless', 'docker.io/library/docker:27-dind-rootless']"
+  platform-variants: "['node-18.x', 'node-20.x', 'node-22.x']"
+  docker-engine-versions: "['docker.io/library/docker:dind-rootless']"
+  # platform-variants: "['node-18.x', 'node-20.x', 'node-22.x', 'bun', 'deno', 'node-20.x-undici', 'node-22.x-undici', 'bun-undici', 'deno-undici']"
+  # docker-engine-versions: "['docker.io/library/docker:23-dind-rootless', 'docker.io/library/docker:24-dind-rootless', 'docker.io/library/docker:25-dind-rootless', 'docker.io/library/docker:26-dind-rootless', 'docker.io/library/docker:27-dind-rootless']"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
@@ -85,7 +87,6 @@ jobs:
           platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
   docker-engine-tests:
-    if: false
     needs: [compute-matrices, typescript-build, docker-build]
     runs-on: ubuntu-latest
     timeout-minutes: 10
