--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,6 +99,7 @@
         "resolv",
         "rize",
         "rootfs",
+        "rootlesscontainers",
         "rprivate",
         "rshared",
         "rslave",
