--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ on:
 env:
   docker-engine-connection-variants: "['ssh', 'http', 'https', 'socket']"
   platform-variants: "['node-18.x', 'node-20.x', 'node-22.x']"
-  docker-engine-versions: "['docker.io/library/docker:dind-rootless']"
+  docker-engine-versions: "['docker.io/library/docker:25-dind-rootless']"
   # platform-variants: "['node-18.x', 'node-20.x', 'node-22.x', 'bun', 'deno', 'node-20.x-undici', 'node-22.x-undici', 'bun-undici', 'deno-undici']"
   # docker-engine-versions: "['docker.io/library/docker:23-dind-rootless', 'docker.io/library/docker:24-dind-rootless', 'docker.io/library/docker:25-dind-rootless', 'docker.io/library/docker:26-dind-rootless', 'docker.io/library/docker:27-dind-rootless']"
 
