--- a/.github/actions/rootlesscontainers-apparmor/action.yml
+++ b/.github/actions/rootlesscontainers-apparmor/action.yml
@@ -9,15 +9,4 @@ runs:
     - shell: bash
       if: ${{ runner.os == 'Linux' }} && ${{ runner.os_version == '24' }}
       run: |
-        cat <<EOT | sudo tee "/etc/apparmor.d/usr.local.bin.rootlesskit"
-        abi <abi/4.0>,
-        include <tunables/global>
-
-        /usr/bin/rootlesskit flags=(unconfined) {
-          userns,
-
-          # Site-specific additions and overrides. See local/README for details.
-          include if exists <local/usr.local.bin.rootlesskit>
-        }
-        EOT
-        sudo systemctl restart apparmor.service
+        echo 0 | sudo tee /proc/sys/kernel/apparmor_restrict_unprivileged_userns
