--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -121,8 +121,12 @@ jobs:
 
       - if: startsWith(matrix.platform-variant, 'node')
         uses: ./.github/actions/setup-node
-      - if: startsWith(matrix.platform-variant, 'node')
+      - if: startsWith(matrix.platform-variant, 'node') && !startsWith(matrix.docker-engine-connection-variant, 'socket')
         run: pnpm test
+      - if: startsWith(matrix.platform-variant, 'node') && startsWith(matrix.docker-engine-connection-variant, 'socket')
+        run: |
+          sudo -E npm install -g pnpm
+          sudo -E pnpm test
 
       - if: startsWith(matrix.platform-variant, 'bun')
         uses: ./.github/actions/setup-bun
