--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,14 +26,15 @@ env:
       'deno',
       'deno-undici'
     ]"
-  # missing: 'docker.io/library/docker:28-dind-rootless', 'docker.io/library/docker:dind-rootless'
   docker-engine-versions:
     "[
       'docker.io/library/docker:23-dind-rootless',
       'docker.io/library/docker:24-dind-rootless',
       'docker.io/library/docker:25-dind-rootless',
       'docker.io/library/docker:26-dind-rootless',
-      'docker.io/library/docker:27-dind-rootless'
+      'docker.io/library/docker:27-dind-rootless',
+      'docker.io/library/docker:28-dind-rootless',
+      'docker.io/library/docker:dind-rootless'
     ]"
 
 concurrency:
