--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,7 @@
         "HKLM",
         "hyperv",
         "identitytoken",
+        "interuptible",
         "IPAM",
         "janedoe",
         "jscodeshift",
