--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,8 @@
 remote_theme: mikearnaldi/just-the-docs
 
+baseurl: "/the-moby-effect"
+repository: "leonitousconforti/the-moby-effect"
+
 # Enable or disable the site search
 search_enabled: true
 
