docker compose is working

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -47,6 +47,7 @@
         "endport",
         "etwlogs",
         "extrahosts",
+        "Failable",
         "fluentd",
         "forcerm",
         "gelf",
