--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.25"
+        "eftar": "0.0.29"
     },
     "devDependencies": {
         "@babel/cli": "7.27.0",
@@ -56,23 +56,26 @@
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.26.3",
         "@effect/build-utils": "0.7.9",
-        "@effect/cli": "0.58.3",
+        "@effect/cli": "0.59.4",
+        "@effect/cluster": "0.29.7",
         "@effect/docgen": "0.5.2",
         "@effect/eslint-plugin": "0.3.0",
-        "@effect/experimental": "0.43.3",
+        "@effect/experimental": "0.44.4",
         "@effect/language-service": "0.4.0",
-        "@effect/platform": "0.79.3",
-        "@effect/platform-browser": "0.58.3",
-        "@effect/platform-bun": "0.59.3",
-        "@effect/platform-node": "0.75.3",
-        "@effect/printer": "0.41.12",
-        "@effect/printer-ansi": "0.41.12",
-        "@effect/typeclass": "0.32.12",
-        "@effect/vitest": "0.19.10",
+        "@effect/platform": "0.80.4",
+        "@effect/platform-browser": "0.59.4",
+        "@effect/platform-bun": "0.60.7",
+        "@effect/platform-node": "0.76.7",
+        "@effect/printer": "0.42.4",
+        "@effect/printer-ansi": "0.42.4",
+        "@effect/rpc": "0.55.5",
+        "@effect/sql": "0.33.4",
+        "@effect/typeclass": "0.33.4",
+        "@effect/vitest": "0.20.4",
         "@eslint/compat": "1.2.7",
         "@eslint/eslintrc": "3.3.1",
         "@eslint/js": "9.23.0",
-        "@types/node": "22.13.10",
+        "@types/node": "22.13.14",
         "@types/ssh2": "1.15.4",
         "@types/ws": "8.18.0",
         "@typescript-eslint/eslint-plugin": "8.29.0",
@@ -81,7 +84,7 @@
         "@vitest/coverage-v8": "3.1.1",
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
-        "effect": "3.13.12",
+        "effect": "3.14.4",
         "eslint": "9.23.0",
         "eslint-config-prettier": "10.1.1",
         "eslint-import-resolver-typescript": "4.3.1",
@@ -107,14 +110,17 @@
         "ws": "8.18.1"
     },
     "peerDependencies": {
-        "@effect/experimental": "0.43.3",
-        "@effect/platform": "0.79.3",
-        "effect": "3.13.12"
+        "@effect/cluster": "0.29.7",
+        "@effect/experimental": "0.44.4",
+        "@effect/platform": "0.80.4",
+        "@effect/rpc": "0.55.5",
+        "@effect/sql": "0.33.4",
+        "effect": "3.14.4"
     },
     "optionalDependencies": {
-        "@effect/platform-browser": "0.58.3",
-        "@effect/platform-bun": "0.59.3",
-        "@effect/platform-node": "0.75.3",
+        "@effect/platform-browser": "0.59.4",
+        "@effect/platform-bun": "0.60.7",
+        "@effect/platform-node": "0.76.7",
         "ssh2": "^1.16.0",
         "undici": "^7.4.0",
         "ws": "^8.18.1"
