--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -95,6 +95,7 @@
         "packagejson",
         "percpu",
         "Pids",
+        "Pipeable",
         "privs",
         "rechunk",
         "Refail",
