--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "codegen": "build-utils prepare-v2",
         "codemod": "node scripts/codemod.mjs",
         "coverage": "vitest --coverage",
-        "lint": "eslint .",
+        "lint": "eslint \"**/{src,test,examples,scripts,dtslint}/**/*.{ts,mjs}\"",
         "schemagen": "pnpm build-reflection && pnpm build-schemas",
         "test": "vitest",
         "update-blobs": "tsx ./scripts/update-blobs.ts"
@@ -59,7 +59,6 @@
         "@effect/cli": "0.59.6",
         "@effect/cluster": "0.29.10",
         "@effect/docgen": "0.5.2",
-        "@effect/eslint-plugin": "0.3.0",
         "@effect/experimental": "0.44.6",
         "@effect/language-service": "0.5.1",
         "@effect/platform": "0.80.6",
@@ -72,15 +71,11 @@
         "@effect/sql": "0.33.6",
         "@effect/typeclass": "0.33.6",
         "@effect/vitest": "0.20.6",
-        "@eslint/compat": "1.2.8",
-        "@eslint/eslintrc": "3.3.1",
         "@eslint/js": "9.24.0",
         "@types/node": "22.14.0",
         "@types/ssh2": "1.15.5",
         "@types/ws": "8.18.1",
-        "@typescript-eslint/eslint-plugin": "8.29.0",
         "@typescript-eslint/parser": "8.29.0",
-        "@typescript-eslint/utils": "8.29.0",
         "@vitest/coverage-v8": "3.1.1",
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
