--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,7 +1,7 @@
 // spell-checker: disable
 {
     "name": "the-moby-effect",
-    "image": "mcr.microsoft.com/devcontainers/base:bullseye",
+    "image": "mcr.microsoft.com/devcontainers/base:bookworm",
 
     "features": {
         "ghcr.io/devcontainers/features/go:1.3.2": {},
