--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "the-moby-effect",
-    "version": "0.0.0",
+    "version": "1.48.2",
     "description": "Moby/Docker API client built using effect-ts",
     "keywords": [
         "moby",
@@ -30,7 +30,7 @@
         "test": "test"
     },
     "scripts": {
-        "build": "pnpm clean && pnpm codegen && pnpm build-esm && pnpm build-annotate && pnpm build-cjs && build-utils pack-v2 && docgen",
+        "build": "pnpm clean && pnpm codegen && pnpm build-esm && pnpm build-annotate && pnpm build-cjs && build-utils pack-v2",
         "build-annotate": "babel build/esm --plugins annotate-pure-calls --out-dir build/esm --source-maps",
         "build-cjs": "babel build/esm --plugins @babel/transform-export-namespace-from --plugins @babel/transform-modules-commonjs --out-dir build/cjs --source-maps",
         "build-esm": "tsc -b tsconfig.build.json",
@@ -48,29 +48,30 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.53"
+        "eftar": "0.0.54"
     },
     "devDependencies": {
         "@babel/cli": "7.27.0",
         "@babel/core": "7.26.10",
         "@babel/plugin-transform-export-namespace-from": "7.25.9",
         "@babel/plugin-transform-modules-commonjs": "7.26.3",
+        "@changesets/cli": "2.29.2",
         "@effect/build-utils": "0.7.9",
-        "@effect/cli": "0.59.11",
-        "@effect/cluster": "0.29.21",
+        "@effect/cli": "0.59.12",
+        "@effect/cluster": "0.29.22",
         "@effect/docgen": "0.5.2",
-        "@effect/experimental": "0.44.11",
+        "@effect/experimental": "0.44.12",
         "@effect/language-service": "0.7.1",
-        "@effect/platform": "0.80.11",
-        "@effect/platform-browser": "0.60.2",
-        "@effect/platform-bun": "0.60.21",
-        "@effect/platform-node": "0.76.21",
-        "@effect/printer": "0.42.11",
-        "@effect/printer-ansi": "0.42.11",
-        "@effect/rpc": "0.55.16",
-        "@effect/sql": "0.33.11",
-        "@effect/typeclass": "0.33.11",
-        "@effect/vitest": "0.20.11",
+        "@effect/platform": "0.80.12",
+        "@effect/platform-browser": "0.60.3",
+        "@effect/platform-bun": "0.60.22",
+        "@effect/platform-node": "0.76.22",
+        "@effect/printer": "0.42.12",
+        "@effect/printer-ansi": "0.42.12",
+        "@effect/rpc": "0.55.17",
+        "@effect/sql": "0.33.12",
+        "@effect/typeclass": "0.33.12",
+        "@effect/vitest": "0.20.12",
         "@eslint/js": "9.25.1",
         "@types/node": "22.14.1",
         "@types/ssh2": "1.15.5",
@@ -79,7 +80,8 @@
         "@vitest/coverage-v8": "3.1.2",
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
-        "effect": "3.14.11",
+        "changesets-gitlab": "0.13.3",
+        "effect": "3.14.12",
         "eslint": "9.25.1",
         "eslint-config-prettier": "10.1.2",
         "eslint-import-resolver-typescript": "4.3.4",
