--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -66,5 +66,6 @@
     },
 
     "remoteUser": "vscode",
-    "postCreateCommand": "bash -i -c './.devcontainer/setup.sh'"
+    "postCreateCommand": "bash -i -c './.devcontainer/setup.sh'",
+    "postStartCommand": "git config --global --add safe.directory ${containerWorkspaceFolder}"
 }
