--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
         "typescript": "5.8.3",
         "typescript-eslint": "8.31.0",
         "undici": "7.8.0",
+        "unrs-resolver": "1.7.2",
         "vite": "6.3.3",
         "vitest": "3.1.2",
         "ws": "8.18.1"
