reimplement docker compose

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -71,6 +71,7 @@
         "libnetwork",
         "memswap",
         "Millis",
+        "mktemp",
         "moby",
         "mobydock",
         "Mountpoint",
@@ -127,6 +128,7 @@
         "UIDGID",
         "Ulimits",
         "ulong",
+        "uncurry",
         "undici",
         "unlockkey",
         "Untar",
