--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.60"
+        "eftar": "0.0.62"
     },
     "devDependencies": {
         "@babel/cli": "7.27.2",
@@ -63,21 +63,21 @@
         "@babel/plugin-transform-modules-commonjs": "7.27.1",
         "@changesets/cli": "2.29.3",
         "@effect/build-utils": "0.8.3",
-        "@effect/cli": "0.59.18",
-        "@effect/cluster": "0.30.6",
+        "@effect/cli": "0.59.19",
+        "@effect/cluster": "0.30.8",
         "@effect/docgen": "https://pkg.pr.new/Effect-TS/docgen/@effect/docgen@57ff897",
-        "@effect/experimental": "0.44.18",
-        "@effect/language-service": "0.9.1",
-        "@effect/platform": "0.80.18",
-        "@effect/platform-browser": "0.60.9",
-        "@effect/platform-bun": "0.61.6",
-        "@effect/platform-node": "0.77.6",
-        "@effect/printer": "0.42.18",
-        "@effect/printer-ansi": "0.42.18",
-        "@effect/rpc": "0.56.6",
-        "@effect/sql": "0.33.18",
-        "@effect/typeclass": "0.33.18",
-        "@effect/vitest": "0.21.1",
+        "@effect/experimental": "0.44.19",
+        "@effect/language-service": "0.9.2",
+        "@effect/platform": "0.80.19",
+        "@effect/platform-browser": "0.60.10",
+        "@effect/platform-bun": "0.61.8",
+        "@effect/platform-node": "0.77.8",
+        "@effect/printer": "0.42.19",
+        "@effect/printer-ansi": "0.42.19",
+        "@effect/rpc": "0.56.7",
+        "@effect/sql": "0.33.19",
+        "@effect/typeclass": "0.33.19",
+        "@effect/vitest": "0.21.2",
         "@eslint/js": "9.26.0",
         "@types/node": "22.15.13",
         "@types/ssh2": "1.15.5",
@@ -87,7 +87,7 @@
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
         "changesets-gitlab": "0.13.3",
-        "effect": "3.14.18",
+        "effect": "3.14.19",
         "eslint": "9.26.0",
         "eslint-config-prettier": "10.1.2",
         "eslint-import-resolver-typescript": "4.3.4",
@@ -108,20 +108,20 @@
         "typescript": "5.8.3",
         "typescript-eslint": "8.32.0",
         "undici": "7.8.0",
-        "vite": "6.3.5",
-        "vitest": "3.1.3",
+        "vite": "^6.3.5",
+        "vitest": "^3.1.3",
         "ws": "8.18.2"
     },
     "peerDependencies": {
-        "@effect/cluster": "0.30.6",
-        "@effect/experimental": "0.44.18",
-        "@effect/platform": "0.80.18",
-        "@effect/platform-browser": "0.60.9",
-        "@effect/platform-bun": "0.61.6",
-        "@effect/platform-node": "0.77.6",
-        "@effect/rpc": "0.56.6",
-        "@effect/sql": "0.33.18",
-        "effect": "3.14.18"
+        "@effect/cluster": "0.30.8",
+        "@effect/experimental": "0.44.19",
+        "@effect/platform": "0.80.19",
+        "@effect/platform-browser": "0.60.10",
+        "@effect/platform-bun": "0.61.8",
+        "@effect/platform-node": "0.77.8",
+        "@effect/rpc": "0.56.7",
+        "@effect/sql": "0.33.19",
+        "effect": "3.14.19"
     },
     "peerDependenciesMeta": {
         "@effect/platform-browser": {
@@ -136,8 +136,8 @@
     },
     "optionalDependencies": {
         "ssh2": "^1.16.0",
-        "undici": "^7.7.0",
-        "ws": "^8.18.1"
+        "undici": "^7.8.0",
+        "ws": "8.18.2"
     },
     "packageManager": "pnpm@9.15.9",
     "engines": {
