--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "basictypes",
         "behaviour",
         "Blkio",
+        "blkiodev",
         "buildargs",
         "buildx",
         "bunx",
@@ -119,6 +120,7 @@
         "someuser",
         "SQUIGGLYS",
         "startport",
+        "Swarmkit",
         "sysctls",
         "Templating",
         "tmpfs",
