--- a/.gitmodules
+++ b/.gitmodules
@@ -18,3 +18,7 @@
 	path = submodules/moby-27.0-branch-max-api-1.46
 	url = https://github.com/moby/moby.git
 	branch = 27.x
+[submodule "moby-28.0-branch-max-api-1.48"]
+	path = submodules/moby-28.0-branch-max-api-1.48
+	url = https://github.com/moby/moby.git
+	branch = 28.x
