--- a/package.json
+++ b/package.json
@@ -54,62 +54,63 @@
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
     "dependencies": {
-        "eftar": "0.0.63"
+        "eftar": "0.0.66"
     },
     "devDependencies": {
-        "@babel/cli": "7.27.2",
-        "@babel/core": "7.27.1",
+        "@babel/cli": "7.28.3",
+        "@babel/core": "7.28.4",
         "@babel/plugin-transform-export-namespace-from": "7.27.1",
         "@babel/plugin-transform-modules-commonjs": "7.27.1",
-        "@changesets/cli": "2.29.3",
-        "@effect/build-utils": "0.8.3",
-        "@effect/cli": "0.59.20",
-        "@effect/cluster": "0.30.10",
+        "@changesets/cli": "2.29.7",
+        "@effect/build-utils": "0.8.9",
+        "@effect/cli": "0.69.2",
+        "@effect/cluster": "0.48.5",
         "@effect/docgen": "https://pkg.pr.new/Effect-TS/docgen/@effect/docgen@57ff897",
-        "@effect/experimental": "0.44.20",
-        "@effect/language-service": "0.9.2",
-        "@effect/platform": "0.80.20",
-        "@effect/platform-browser": "0.60.11",
-        "@effect/platform-bun": "0.61.10",
-        "@effect/platform-node": "0.77.10",
-        "@effect/printer": "0.42.20",
-        "@effect/printer-ansi": "0.42.20",
-        "@effect/rpc": "0.56.8",
-        "@effect/sql": "0.33.20",
-        "@effect/typeclass": "0.33.20",
-        "@effect/vitest": "0.21.3",
-        "@eslint/js": "9.26.0",
-        "@types/node": "22.15.15",
+        "@effect/experimental": "0.54.6",
+        "@effect/language-service": "0.40.0",
+        "@effect/platform": "0.90.9",
+        "@effect/platform-browser": "0.70.0",
+        "@effect/platform-bun": "0.79.0",
+        "@effect/platform-node": "0.96.1",
+        "@effect/printer": "0.45.0",
+        "@effect/printer-ansi": "0.45.0",
+        "@effect/rpc": "0.69.2",
+        "@effect/sql": "0.44.2",
+        "@effect/typeclass": "0.36.0",
+        "@effect/vitest": "0.25.1",
+        "@effect/workflow": "0.9.5",
+        "@eslint/js": "9.35.0",
+        "@types/node": "24.3.1",
         "@types/ssh2": "1.15.5",
         "@types/ws": "8.18.1",
-        "@typescript-eslint/parser": "8.32.0",
-        "@vitest/coverage-v8": "3.1.3",
+        "@typescript-eslint/parser": "8.43.0",
+        "@vitest/coverage-v8": "3.2.4",
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
-        "changesets-gitlab": "0.13.3",
-        "effect": "3.14.20",
-        "eslint": "9.26.0",
-        "eslint-config-prettier": "10.1.3",
-        "eslint-import-resolver-typescript": "4.3.4",
-        "eslint-plugin-import-x": "4.11.0",
-        "eslint-plugin-prettier": "5.4.0",
+        "changesets-gitlab": "0.13.4",
+        "effect": "3.17.13",
+        "eslint": "9.35.0",
+        "eslint-config-prettier": "10.1.8",
+        "eslint-import-resolver-typescript": "4.4.4",
+        "eslint-plugin-import-x": "4.16.1",
+        "eslint-plugin-prettier": "5.5.4",
         "eslint-plugin-simple-import-sort": "12.1.1",
         "eslint-plugin-sort-destructure-keys": "2.0.0",
-        "fast-check": "4.1.1",
-        "glob": "11.0.2",
+        "fast-check": "4.3.0",
+        "glob": "11.0.3",
         "jscodeshift": "17.3.0",
         "madge": "8.0.0",
-        "prettier": "3.5.3",
-        "prettier-plugin-jsdoc": "1.3.2",
-        "prettier-plugin-packagejson": "2.5.11",
+        "prettier": "3.6.2",
+        "prettier-plugin-jsdoc": "1.3.3",
+        "prettier-plugin-packagejson": "2.5.19",
         "rimraf": "6.0.1",
         "ssh2": "1.16.0",
-        "tsx": "4.19.4",
-        "typescript": "5.8.3",
-        "typescript-eslint": "8.32.0",
+        "tsx": "4.20.5",
+        "typescript": "5.9.2",
+        "typescript-eslint": "8.43.0",
         "undici": "7.8.0",
-        "vite": "^6.3.5",
-        "vitest": "^3.1.3",
+        "vite": "7.1.5",
+        "vitest": "3.2.4",
         "ws": "8.18.2"
     },
     "peerDependencies": {
@@ -121,6 +122,7 @@
         "@effect/platform-node": "0.77.10",
         "@effect/rpc": "0.56.8",
         "@effect/sql": "0.33.20",
+        "@effect/workflow": "0.9.5",
         "effect": "3.14.20"
     },
     "peerDependenciesMeta": {
@@ -135,9 +137,9 @@
         }
     },
     "optionalDependencies": {
-        "ssh2": "^1.16.0",
-        "undici": "^7.8.0",
-        "ws": "8.18.2"
+        "ssh2": "^1.17.0",
+        "undici": "^7.16.0",
+        "ws": "^8.18.3"
     },
     "packageManager": "pnpm@9.15.9",
     "engines": {
@@ -148,10 +150,5 @@
         "directory": "dist",
         "linkDirectory": false,
         "provenance": false
-    },
-    "pnpm": {
-        "patchedDependencies": {
-            "@effect/build-utils": "patches/@effect__build-utils.patch"
-        }
     }
 }
