--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -57,6 +57,7 @@
         "cpusetcpus",
         "cpushares",
         "Datacenter",
+        "Decodeable",
         "demultiplexing",
         "Demux",
         "demuxing",
@@ -69,6 +70,7 @@
         "Domainname",
         "downcasting",
         "dprint",
+        "Effectable",
         "eftar",
         "endport",
         "etwlogs",
@@ -77,6 +79,7 @@
         "fluentd",
         "forcerm",
         "gelf",
+        "Gidentifier",
         "gitsubmodule",
         "GOARCH",
         "goroutines",
