--- a/package.json
+++ b/package.json
@@ -36,20 +36,16 @@
         "test": "test"
     },
     "scripts": {
-        "build": "pnpm clean && pnpm codegen && pnpm build-esm && pnpm build-annotate && pnpm build-cjs && build-utils pack-v3",
-        "build-annotate": "babel build/esm --plugins annotate-pure-calls --out-dir build/esm --source-maps",
-        "build-cjs": "babel build/esm --plugins @babel/transform-export-namespace-from --plugins @babel/transform-modules-commonjs --out-dir build/cjs --source-maps",
-        "build-esm": "tsc -b tsconfig.build.json",
-        "build-reflection": "(cd reflection/ && go build)",
-        "build-schemas": "(cd reflection && ./reflection) && eslint ./src/internal/generated/ --fix",
+        "build": "pnpm clean && pnpm codegen && tsc -b tsconfig.build.json && babel dist --plugins annotate-pure-calls --out-dir dist --source-maps",
         "check": "tsc -b tsconfig.json",
-        "circular": "node ./scripts/circular.mjs",
+        "circular": "madge --circular src/*.ts",
         "clean": "rimraf .tsbuildinfo docs build dist coverage",
-        "codegen": "build-utils prepare-v3",
+        "codegen": "build-utils prepare-v4",
         "codemod": "node scripts/codemod.mjs",
         "coverage": "vitest --coverage",
         "lint": "eslint \"**/{src,test,examples,scripts,dtslint}/**/*.{ts,mjs}\"",
-        "schemagen": "pnpm build-reflection && pnpm build-schemas",
+        "prepare": "effect-language-service patch",
+        "schemagen": "(cd reflection && go build && ./reflection) && eslint ./src/internal/generated/ --fix",
         "test": "vitest",
         "update-blobs": "tsx ./scripts/update-blobs.ts"
     },
@@ -63,33 +59,33 @@
         "@babel/plugin-transform-modules-commonjs": "7.27.1",
         "@changesets/cli": "2.29.7",
         "@effect/build-utils": "0.8.9",
-        "@effect/cli": "0.69.2",
-        "@effect/cluster": "0.48.5",
+        "@effect/cli": "0.70.0",
+        "@effect/cluster": "0.49.1",
         "@effect/docgen": "https://pkg.pr.new/Effect-TS/docgen/@effect/docgen@57ff897",
-        "@effect/experimental": "0.54.6",
-        "@effect/language-service": "0.40.0",
-        "@effect/platform": "0.90.9",
-        "@effect/platform-browser": "0.70.0",
-        "@effect/platform-bun": "0.79.0",
-        "@effect/platform-node": "0.96.1",
+        "@effect/experimental": "0.55.0",
+        "@effect/language-service": "0.40.1",
+        "@effect/platform": "0.91.1",
+        "@effect/platform-browser": "0.71.0",
+        "@effect/platform-bun": "0.80.0",
+        "@effect/platform-node": "0.97.1",
         "@effect/printer": "0.45.0",
         "@effect/printer-ansi": "0.45.0",
-        "@effect/rpc": "0.69.2",
-        "@effect/sql": "0.44.2",
+        "@effect/rpc": "0.70.0",
+        "@effect/sql": "0.45.0",
         "@effect/typeclass": "0.36.0",
         "@effect/vitest": "0.25.1",
-        "@effect/workflow": "0.9.5",
-        "@eslint/js": "9.35.0",
-        "@types/node": "24.3.1",
+        "@effect/workflow": "0.10.0",
+        "@eslint/js": "9.36.0",
+        "@types/node": "24.5.2",
         "@types/ssh2": "1.15.5",
         "@types/ws": "8.18.1",
-        "@typescript-eslint/parser": "8.43.0",
+        "@typescript-eslint/parser": "8.44.1",
         "@vitest/coverage-v8": "3.2.4",
         "ast-types": "0.14.2",
         "babel-plugin-annotate-pure-calls": "0.5.0",
         "changesets-gitlab": "0.13.4",
-        "effect": "3.17.13",
-        "eslint": "9.35.0",
+        "effect": "3.17.14",
+        "eslint": "9.36.0",
         "eslint-config-prettier": "10.1.8",
         "eslint-import-resolver-typescript": "4.4.4",
         "eslint-plugin-import-x": "4.16.1",
@@ -107,23 +103,19 @@
         "ssh2": "1.16.0",
         "tsx": "4.20.5",
         "typescript": "5.9.2",
-        "typescript-eslint": "8.43.0",
+        "typescript-eslint": "8.44.1",
         "undici": "7.8.0",
-        "vite": "7.1.5",
+        "vite": "7.1.7",
+        "vite-tsconfig-paths": "5.1.4",
         "vitest": "3.2.4",
         "ws": "8.18.2"
     },
     "peerDependencies": {
-        "@effect/cluster": "0.30.10",
-        "@effect/experimental": "0.44.20",
-        "@effect/platform": "0.80.20",
-        "@effect/platform-browser": "0.60.11",
-        "@effect/platform-bun": "0.61.10",
-        "@effect/platform-node": "0.77.10",
-        "@effect/rpc": "0.56.8",
-        "@effect/sql": "0.33.20",
-        "@effect/workflow": "0.9.5",
-        "effect": "3.14.20"
+        "@effect/platform": "0.91.1",
+        "@effect/platform-browser": "0.71.0",
+        "@effect/platform-bun": "0.80.0",
+        "@effect/platform-node": "0.97.1",
+        "effect": "3.17.14"
     },
     "peerDependenciesMeta": {
         "@effect/platform-browser": {
