--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
-    "extends": "./tsconfig.base.json",
+    "$schema": "http://json.schemastore.org/tsconfig",
+    "extends": "./tsconfig.base.jsonc",
     "include": [],
-    "references": [
-        { "path": "./tsconfig.bin.json" },
-        { "path": "./tsconfig.src.json" },
-        { "path": "./tsconfig.test.json" },
-        { "path": "./tsconfig.examples.json" }
-    ]
+    "references": [{ "path": "./tsconfig.src.json" }, { "path": "./tsconfig.test.json" }]
 }
