--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -94,6 +94,7 @@
         "jscodeshift",
         "jsonmessage",
         "kernelmode",
+        "klass",
         "kmem",
         "leonitous",
         "leonitousconforti",
